--- a/src/components/Identidad.astro
+++ b/src/components/Identidad.astro
@@ -2,6 +2,9 @@
 const { obj, errorMsgRunError, errorMsgSerieError, 
         errorMensajeFrontal, imagenFrontal, errorMensaje,
         imagenPosterior, cargarFrontal, cargarPosterior } = Astro.props;
+
+
+
 ---
 <div class="box">
   <div class="field">
@@ -10,7 +13,7 @@ const { obj, errorMsgRunError, errorMsgSerieError,
     <div class="input-group flex-nowrap">
       <span class="input-group-text" id="addon-wrapping"><img src="/static/assets/img/person.svg" alt=""/></span>
 
-      <input type="text" id="rut" name="rut" class="form-control is-valid" placeholder="Ej. 11111111-1" value={obj.rut} required readonly/>
+      <input type="text" id="rut" name="rut" class="form-control is-valid" placeholder="Ej. 11111111-1" value={obj.rut} required/>
     </div>
 
     <div id="txtRunNoValido" class="alert alert-danger d-none">RUN no válido</div>
@@ -19,7 +22,7 @@ const { obj, errorMsgRunError, errorMsgSerieError,
     }
 
     <div class="field">
-      <label class="label" for="numeroDocumento">Número de documento
+      <label class="label" for="numeroSerie">Número de documento
         <a href="#" data-bs-toggle="modal" data-bs-target="#modalndoc">
           <img src="/static/assets/img/info.svg" alt="">
         </a>
@@ -27,15 +30,15 @@ const { obj, errorMsgRunError, errorMsgSerieError,
       <div class="input-group flex-nowrap">
         <span class="input-group-text" id="addon-wrapping"><img src="/static/assets/img/note.svg" alt=""/></span>
         {obj.estadoPosterior === 0 &&
-          <input type="text" id="numeroDocumento" name="numero_documento" minlength="9" class="form-control" placeholder="Ej. 100000001"value={obj.numeroSerie} required />
+          <input type="text" id="numeroSerie" name="numero_documento" minlength="9" class="form-control" placeholder="Ej. 100000001"value={obj.numeroSerie} required />
         }
 
         {obj.estadoPosterior === 1 &&
-          <input type="text" id="numeroDocumento" name="numero_documento" minlength="9" class="form-control is-valid" placeholder="Ej. 100000001"value={obj.numeroSerie} required readonly/>
+          <input type="text" id="numeroSerie" name="numero_documento" minlength="9" class="form-control is-valid" placeholder="Ej. 100000001"value={obj.numeroSerie} required readonly/>
         }
 
         {obj.estadoPosterior === 2 &&
-          <input type="text" id="numeroDocumento" name="numero_documento" minlength="9" class="form-control" placeholder="Ej. 100000001"value={obj.numeroSerie} required />
+          <input type="text" id="numeroSerie" name="numero_documento" minlength="9" class="form-control" placeholder="Ej. 100000001"value={obj.numeroSerie} required />
         }
       </div>
     </div>
@@ -190,28 +193,6 @@ const { obj, errorMsgRunError, errorMsgSerieError,
   </div>
 </div>
 
-<div class="box">
-  <div class="field">
-    <label class="label" for="estadocivil">¿Estado Civil?</label>
-    <div class="control">
-      <div>
-        <select id="estadocivil" name="estadocivil" class="form-select" required>
-          <option value="">Seleccione una opción</option>
-          {obj.estadocivil === '1' ? <option value="1" selected>Soltera</option> : <option value="1">Soltera</option>}
-          {obj.estadocivil === '2' ? <option value="2" selected>Casada</option> : <option value="2">Casada</option>}
-          {obj.estadocivil === '3' ? <option value="3" selected>Divorciada</option> : <option value="3">Divorciada</option>}
-          {obj.estadocivil === '4' ? <option value="4" selected>Viuda</option> : <option value="4">Viuda</option>}
-          {obj.estadocivil === '5' ? <option value="5" selected>Separada</option> : <option value="5">Separada</option>}
-          {obj.estadocivil === '6' ? <option value="6" selected>Conviviente</option> : <option value="6">Conviviente</option>}
-        </select>
-        <div class="invalid-feedback">
-          Seleccione su estado civil
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 <script>
   import {  validate, format } from 'rut.js';
   
@@ -255,14 +236,14 @@ const { obj, errorMsgRunError, errorMsgSerieError,
       btnFrontal.addEventListener('click', () => {
         console.log('btnCaptureFrontal');
         const rut = (document.getElementById('rut') as HTMLInputElement).value ;
-        const numeroSerie = (document.getElementById('numeroDocumento') as HTMLInputElement).value;
-        if ( rut.length > 0 && numeroSerie.length > 0 ){
+        const numeroSerie = (document.getElementById('numeroSerie') as HTMLInputElement).value;
+        if ( rut.length > 0 && numeroSerie.length > 0){
           showSpinner();
           (document.getElementById('mode') as HTMLInputElement).value = 'captureFrontal';
           (document.getElementById('frm') as HTMLFormElement).submit();
         } else {
           if ( rut.length === 0 )  (document.getElementById('rut')  as HTMLInputElement).focus();
-          else (document.getElementById('numeroDocumento') as HTMLInputElement).focus();
+          else (document.getElementById('numeroSerie') as HTMLInputElement).focus();
         }        
       });
     }
@@ -271,14 +252,14 @@ const { obj, errorMsgRunError, errorMsgSerieError,
     if ( btnPosterior !== null ){
       btnPosterior.addEventListener('click', () => {
         const rut = (document.getElementById('rut') as HTMLInputElement).value ;
-        const numeroSerie = (document.getElementById('numeroDocumento') as HTMLInputElement).value;
+        const numeroSerie = (document.getElementById('numeroSerie') as HTMLInputElement).value;
         if ( rut.length > 0 && numeroSerie.length > 0 ){
           showSpinner();
           (document.getElementById('mode') as HTMLInputElement).value = 'capturePosterior';
           (document.getElementById('frm') as HTMLFormElement).submit();
         } else {
           if ( rut.length === 0 )  (document.getElementById('rut')  as HTMLInputElement).focus();
-          else (document.getElementById('numeroDocumento') as HTMLInputElement).focus();
+          else (document.getElementById('numeroSerie') as HTMLInputElement).focus();
         }
       });
     }
