--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { connect } from '@planetscale/database';
 import Barrita from "../components/Barrita.astro";
 
 
-//return Astro.redirect('/plazo-finalizado');
+return Astro.redirect('/f/datos-personales');
 
 const comunas = [
   'Santiago', 
@@ -72,12 +72,6 @@ obj.emailNoVerificado = false;
 obj.rut = '';
 obj.existe = false;
 
-obj.pregunta1 = '';
-obj.pregunta2 = '';
-obj.pregunta3 = '';
-obj.pregunta4 = '';
-obj.pregunta5 = '';
-obj.pregunta6 = '';
 obj.finalizado = false;
 
 
@@ -90,15 +84,6 @@ if ( Astro.cookies.has('payload') ) {
   let decrypted = AES.decrypt(encrypted, configEnv.SECRET_KEY);
   obj = JSON.parse(decrypted.toString(enc.Utf8).toString());
   console.log('cookieIndex', {obj});
-
-  if ( obj.pregunta1 === '1' && 
-       obj.pregunta2 === '1' &&
-       obj.pregunta3 === '1' &&
-       obj.pregunta4 === '1' &&
-       obj.pregunta5 === '1'
-  ) {
-    showBtn = true;
-  }
 
   if ( obj.existe === true ) {
     return Astro.redirect('/recuperar');
@@ -150,7 +135,7 @@ if (Astro.request.method === "POST") {
     obj.pregunta6 = data.get('pregunta6');
     let encrypted = AES.encrypt(JSON.stringify(obj), configEnv.SECRET_KEY).toString();
     Astro.cookies.set('payload', encrypted, { path: '/', httpOnly: true, secure: true, sameSite: 'lax' });
-    return Astro.redirect('/formulario');
+    return Astro.redirect('/f/datos-personales');
   }
 }
 
@@ -200,312 +185,6 @@ if (Astro.request.method === "POST") {
       }
 
     </div>
-
-    <div class="box">
-      <div class="field">
-        <label class="label" for="pregunta1">
-          <Barrita /> ¿Puede realizar acciones como navegar por internet, buscar información utilizando un navegador web, enviar y recibir correos electrónicos, y crear y editar documentos mediante programas como Word o Google Docs?
-        </label>
-        <div class="control">
-          <div>
-            {obj.rut === '' ? 
-              <select id="pregunta1" name="pregunta1" class="form-select pp" disabled>
-                <option value="">Seleccione una opción</option>
-              </select> 
-            :
-              <select id="pregunta1" name="pregunta1" class="form-select pp" required>
-                <option value="">Seleccione una opción</option>
-                {obj.pregunta1 === '1' && 
-                  <option value="1" selected>SÍ</option>
-                  <option value="2">NO</option>
-                }
-                {obj.pregunta1 === '2' && 
-                  <option value="1">SÍ</option>
-                  <option value="2" selected>NO</option>
-                }
-                {obj.pregunta1 === '' && 
-                  <option value="1">SÍ</option>
-                  <option value="2">NO</option>
-                }
-              </select>
-            }
-          </div>
-        </div>
-      </div>
-
-      <div id="alert_pregunta1" class={obj.pregunta1 === '2' ? 'field' : 'field d-none'}>
-        <p class="alert alert-danger">
-          Agradecemos tu interés en el Diplomado en Competencias Digitales para el Empleo. Sin embargo, 
-          este programa requiere un nivel básico de habilidades digitales. 
-          Si estas habilidades le resultan nuevas o desafiantes, le recomendamos primero 
-          explorar cursos de alfabetización digital antes de postular.
-        </p>
-      </div>
-      
-    </div>
-    
-    <div class="box">
-      <div class="field">
-        <label class="label" for="pregunta2">
-          <Barrita /> ¿Cuenta con un computador de escritorio o notebook para realizar el Diplomado?
-        </label>
-        <div class="control">
-          <div>
-            {obj.rut === '' ? 
-              <select id="pregunta2" name="pregunta2" class="form-select pp" disabled>
-                <option value="">Seleccione una opción</option>
-              </select> 
-            :
-            <select id="pregunta2" name="pregunta2" class="form-select pp" required>
-              <option value="">Seleccione una opción</option>
-              {obj.pregunta2 === '1' && 
-                <option value="1" selected>SÍ</option>
-                <option value="2">NO</option>
-              }
-              {obj.pregunta2 === '2' && 
-                <option value="1">SÍ</option>
-                <option value="2" selected>NO</option>
-              }
-              {obj.pregunta2 === '' && 
-                <option value="1">SÍ</option>
-                <option value="2">NO</option>
-              }
-            </select>
-            }
-          </div>
-        </div>
-      </div>
-
-      <div id="alert_pregunta2" class={obj.pregunta2 === '2' ? 'field' : 'field d-none'}>
-        <p class="alert alert-danger">
-          Gracias por considerar inscribirse en el Diplomado en Competencias Digitales para el Empleo. Sin embargo, 
-          es importante informarle que es indispensable contar con un computador para completar todos 
-          los módulos exitosamente. Asegúrese de tener acceso a uno antes de postular.
-        </p>
-      </div>
-
-    </div>
-
-    <div class="box">
-      <div class="field">
-        <label class="label" for="pregunta3">
-          <Barrita />¿Cuenta con conexión a internet permanente? 
-        </label>
-        <div class="control">
-          <div>
-            {obj.rut === '' ? 
-              <select id="pregunta3" name="pregunta3" class="form-select pp" disabled>
-                <option value="">Seleccione una opción</option>
-              </select> 
-            :
-            <select id="pregunta3" name="pregunta3" class="form-select pp" required>
-              <option value="">Seleccione una opción</option>
-              {obj.pregunta3 === '1' && 
-                <option value="1" selected>SÍ</option>
-                <option value="2">NO</option>
-              }
-              {obj.pregunta3 === '2' && 
-                <option value="1">SÍ</option>
-                <option value="2" selected>NO</option>
-              }
-              {obj.pregunta3 === '' && 
-                <option value="1">SÍ</option>
-                <option value="2">NO</option>
-              }
-            </select>
-            }
-          </div>
-        </div>
-      </div>
-      <div id="alert_pregunta3" class={obj.pregunta3 === '2' ? 'field' : 'field d-none'}>
-        <p class="alert alert-danger">
-          Gracias por su interés en el Diplomado en Competencias Digitales para el Empleo. 
-          Sin embargo, es crucial contar con una conexión a internet para participar, ya que gran parte de 
-          las clases y material complementario se encuentra en una plataforma virtual. Si no tiene acceso a internet, 
-          lamentablemente no podrá completar el diplomado. Le recomendamos asegurar una conexión a internet antes de postular.
-        </p>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="field">
-        <label class="label" for="pregunta4">
-          <Barrita />¿Ha utilizado las plataformas Zoom y Google Meet alguna vez? 
-        </label>
-        <div class="control">
-          <div>
-            {obj.rut === '' ? 
-              <select id="pregunta4" name="pregunta4" class="form-select pp" disabled>
-                <option value="">Seleccione una opción</option>
-              </select> 
-            :
-              <select id="pregunta4" name="pregunta4" class="form-select pp" required>
-                <option value="">Seleccione una opción</option>
-                {obj.pregunta4 === '1' && 
-                  <option value="1" selected>SÍ</option>
-                  <option value="2">NO</option>
-                }
-                {obj.pregunta4 === '2' && 
-                  <option value="1">SÍ</option>
-                  <option value="2" selected>NO</option>
-                }
-                {obj.pregunta4 === '' && 
-                  <option value="1">SÍ</option>
-                  <option value="2">NO</option>
-                }
-              </select>
-            }
-          </div>
-        </div>
-      </div>
-      <div id="alert_pregunta4" class={obj.pregunta4 === '2' ? 'field' : 'field d-none'}>
-        <p class="alert alert-danger">
-          Para participar exitosamente en el diplomado, es necesario estar familiarizado con 
-          herramientas como Zoom y Google Meet. Si no conoce estas plataformas, considere aprender a usarlas.
-        </p>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="field">
-        <label class="label" for="pregunta5">
-          <Barrita />¿Reside en una de las 34 comunas urbanas de la Región Metropolitana?
-        </label>
-        <p style="text-align: left;">
-          <Fragment set:html={comunas.join(', ')} />
-        </p>
-        <div class="control">
-          <div>
-            {obj.rut === '' ? 
-              <select id="pregunta5" name="pregunta5" class="form-select pp" disabled>
-                <option value="">Seleccione una opción</option>
-              </select> 
-            :
-              <select id="pregunta5" name="pregunta5" class="form-select pp" required>
-                <option value="">Seleccione una opción</option>
-                {obj.pregunta5 === '1' && 
-                  <option value="1" selected>SÍ</option>
-                  <option value="2">NO</option>
-                }
-                {obj.pregunta5 === '2' && 
-                  <option value="1">SÍ</option>
-                  <option value="2" selected>NO</option>
-                }
-                {obj.pregunta5 === '' && 
-                  <option value="1">SÍ</option>
-                  <option value="2">NO</option>
-                }
-              </select>
-            }
-          </div>
-        </div>
-      </div>
-      <div id="alert_pregunta5" class={obj.pregunta5 === '2' ? 'field' : 'field d-none'}>
-        <p class="alert alert-danger">
-          Para participar en el Diplomado de Competencias Digitales para el Empleo, es requisito 
-          excluyente pertenecer a una de las 34 comunas urbanas de la Región Metropolitana (RM). 
-          Si vives en una de las comunas rurales de la RM, puedes postular a Promueve Rural, programa ejecutado 
-          por la Fundación Prodemu, para conocer más información, ingresa a www.promuevempleomujer.cl. 
-          Si resides en otra región, puedes consultar con tu municipio o gobierno regional sobre las oportunidades de capacitación disponibles.
-        </p>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="field">
-        <div class="label"><Barrita />¿Cómo se enteró del programa Promueve?</div>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'Ferias laborales' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault1" value="Ferias laborales" required checked />
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault1" value="Ferias laborales" required />
-        }
-        <label class="form-check-label" for="flexRadioDefault1">
-          Ferias laborales
-        </label>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'Redes sociales' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault2" value="Redes sociales" required checked/>
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault2" value="Redes sociales" required />
-        }
-        
-        <label class="form-check-label" for="flexRadioDefault2">
-          Redes sociales
-        </label>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'Municipio' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault3" value="Municipio" required checked/>
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault3" value="Municipio" required />
-        }
-        <label class="form-check-label" for="flexRadioDefault3">
-          Municipio
-        </label>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'Empresas' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault4" value="Empresas" required checked />
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault4" value="Empresas" required />
-        }
-        <label class="form-check-label" for="flexRadioDefault4">
-          Empresas
-        </label>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'Organización o fundación' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault5" value="Organización o fundación" required checked />
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault5" value="Organización o fundación" required />
-        }
-        <label class="form-check-label" for="flexRadioDefault5">
-          Organización o fundación
-        </label>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'Medios de comunicación' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault6" value="Medios de comunicación" required checked />
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault6" value="Medios de comunicación" required />
-        }
-        <label class="form-check-label" for="flexRadioDefault6">
-          Medios de comunicación
-        </label>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'CFT o IP' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault7" value="CFT o IP" required checked />
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault7" value="CFT o IP" required />
-        }
-        <label class="form-check-label" for="flexRadioDefault7">
-          CFT o IP
-        </label>
-      </div>
-
-      <div class="form-check">
-        {obj.pregunta6 === 'Metro' ?
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault7" value="Metro" required checked />
-        :
-        <input class="form-check-input" type="radio" name="pregunta6" id="flexRadioDefault7" value="Metro" required />
-        }
-        <label class="form-check-label" for="flexRadioDefault7">
-          Metro
-        </label>
-      </div>
-
-    </div>   
     
     <div class="box mb-3">
       <div class="field">
