--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -41,7 +41,7 @@ if ( token === null ) {
       if ( row.id_room !== null ) {
         return Astro.redirect('/postulacion');
       } else {
-        return Astro.redirect('/documentacion');
+        return Astro.redirect('/f/documentacion');
       }
     } else {
       return Astro.redirect('/no-nos-vulneres');
