--- a/public/static/assets/css/style.css
+++ b/public/static/assets/css/style.css
@@ -110,7 +110,7 @@ body {
     color: #4a4a4a;
     display: block;
     padding: 1.25rem;
-    border-bottom: 2px solid #A6549B;
+    border-bottom: 2px solid #1f3bb8;
 }
 
 .box-round {
