--- a/src/pages/f/datos-academicos.astro
+++ b/src/pages/f/datos-academicos.astro
@@ -127,7 +127,7 @@ if (Astro.request.method === "POST") {
 					sameSite: "lax",
 				});
 
-				return Astro.redirect("/confirmacion");
+				return Astro.redirect("/f/documentacion");
 			} else {
 				obj.finalizado1 = false;
 			}
