--- a/src/components/Nivelescolaridad.astro
+++ b/src/components/Nivelescolaridad.astro
@@ -21,9 +21,9 @@ const { obj } = Astro.props;
 
 <div class="box">
   <div class="field">
-    <label class="label" for="titutlo">Titulo obtenido o carrera en curso</label>
+    <label class="label" for="titulo">Titulo obtenido o carrera en curso</label>
     <div class="input-group flex-nowrap">
-      <input type="text" id="titutlo" name="titutlo" class="form-control" placeholder="Titulo" required autocomplete="off"/>
+      <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Titulo" required autocomplete="off"/>
     </div>
   </div>
 </div>
